Bug 1410646 - Fix SeaMonkey help "log into/onto" and related instances. r=frg

--- a/suite/locales/en-US/chrome/common/help/passwords_help.xhtml
+++ b/suite/locales/en-US/chrome/common/help/passwords_help.xhtml
@@ -130,7 +130,7 @@
   <li><strong>Passwords Saved</strong>: Click this tab to view the list of
     websites for which Password Manager has saved your user name and
     password&mdash;that is, the websites for which you selected <q>Yes</q>
-    in response to Password Manager&apos;s request to store logon
+    in response to Password Manager&apos;s request to store login
     information.
 
     <p>The second column shows the user name for each website. If the password
@@ -151,13 +151,13 @@
   </li>
   <li><strong>Passwords Never Saved</strong>: Click this tab to view the list
     of websites for which you selected <q>Never for this site</q> in response
-    to Password Manager&apos;s request to store logon information.
+    to Password Manager&apos;s request to store login information.
 
     <p>If a website is included on this list, you will always have to type in
-      your user name and password manually when you log onto the website.</p>
+      your user name and password manually when you log in to the website.</p>
 
     <p>If you remove an entry from this list, Password Manager will again ask
-      you, the next time you log onto the website, whether to store your user
+      you, the next time you log in to the website, whether to store your user
       name and password.</p>
   </li>
 </ol>
