Backed out changeset afdac93f1410 (bug 1410646) for grammar mistake. a=IanN

--- a/suite/locales/en-US/chrome/common/help/using_certs_help.xhtml
+++ b/suite/locales/en-US/chrome/common/help/using_certs_help.xhtml
@@ -400,9 +400,9 @@
   Security Device, you can perform these actions:</p>
 
 <ul>
-  <li>Click Log In or Log Out to log in to or out of the Software Security Device.
+  <li>Click Login or Logout to log in or out of the Software Security Device.
     If you are logging in, you will be asked to supply the master password for
-    the device. You must be logged in to a security device before your browser
+    the device. You must be logged into a security device before your browser
     software can use it to provide cryptographic services.</li>
   <li>Click Change Password to change the master password for the device.</li>
 </ul>
