--- a/suite/locales/en-US/chrome/common/help/using_priv_help.xhtml
+++ b/suite/locales/en-US/chrome/common/help/using_priv_help.xhtml
@@ -411,7 +411,7 @@
 
 <p>The user name and password you use at a particular website can be read by the
   site&apos;s administrator. Potentially, that person could then attempt to log
-  in to other websites where you may have used the same user name and password.
+  into other websites where you may have used the same user name and password.
   If this concerns you, you may wish to use a different password at every
   website with which you register.</p>
 
@@ -441,15 +441,15 @@
   opportunity to save user names and passwords on your hard drive that you
   enter while using the Internet.</p>
 
-<p>For example, after you log in to a website from a page that requests a user
+<p>For example, after you log onto a website from a page that requests a user
   name and password, a dialog box appears asking, <q>Do you want Password
-  Manager to remember this login?</q> When you see this dialog box, you can
+  Manager to remember this logon?</q> When you see this dialog box, you can
   click one of the following buttons:</p>
 
 <ul>
   <li><strong>Yes</strong>: The next time you return to the website you&apos;ll
     see that your user name and password are already filled in. All you have to
-    do is click the Log In button (or equivalent) to send them to the
+    do is click the Login button (or equivalent) to send them to the
     server.</li>
   <li><strong>Never for this site</strong>: Password Manager will not ask in
     the future if you want to save your user name and password for that
@@ -458,7 +458,7 @@
     and password, but will ask again the next time you visit the website.</li>
 </ul>
 
-<p>Similarly, when you log in to an email account or an FTP site, or perform any
+<p>Similarly, when you log onto an email account or an FTP site, or perform any
   other action that requires the browser itself to display a special dialog box
   for your login information, you can select this option in the dialog box:</p>
 
@@ -469,7 +469,7 @@
 <p>The next time you check your email or perform other tasks that require a
   password only, the password will be submitted directly without any further
   action on your part. For tasks that require you to enter both a user name and
-  password, you need to click a Log In button or equivalent after Password
+  password, you need to click a Login button or equivalent after Password
   Manager fills in the information.</p>
 
 <p>Password Manager saves your user names and passwords on your own computer in
@@ -503,8 +503,8 @@
     Password Manager to Remember User Names and Passwords</a>).
 
     <p>The next time you visit the website, Password Manager automatically fills
-      in your user name and password on the website&apos;s login page. You can
-      then click the Log In button, or equivalent, to send the information to
+      in your user name and password on the website&apos;s log in page. You can
+      then click the Login button, or equivalent, to send the information to
       the server.</p>
   </li>
   <li>You use Password Manager to remember your user name and password for an
@@ -552,7 +552,7 @@
   Passwords</h2>
 
 <p>To see the user names and passwords you have stored and to display a list of
-  websites from which login information never is saved:</p>
+  websites from which logon information never is saved:</p>
 
 <ul>
   <li>Open the Tools menu, choose Password Manager, and then choose Manage
@@ -570,7 +570,7 @@
     Click the Passwords Never Saved tab to see a list of the websites for which
     you instructed Password Manager never to store user names and passwords. To
     remove a website from this list, click it and then click Remove. The next
-    time you log in to the website, you can use the stored user name and
+    time you log into the website, you can use the stored user name and
     password (if available) or indicate that you want Password Manager to save
     the information for that website.</li>
 </ul>
@@ -889,7 +889,7 @@
 <ul>
   <li>A private window can collect cookies from the sites it visits, but a
     private window does not share cookies with a non-private window and vice
-    versa. For example, if you log in to a website in a regular window, then
+    versa. For example, if you log into a website in a regular window, then
     open a private window to continue, you likely will be asked to enter your
     credentials again.</li>
   <li>Cookies in a private session are accepted according to the settings,
